# ramblr

./: .env.example  .gitignore  .gitmodules  Makefile  NOTICE  PRIVACY.md  README.md  gradle.properties  model-catalog.json  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  reproducible-build.yml
app/: build.gradle.kts
app/src/github/: AndroidManifest.xml
app/src/github/kotlin/com/trevornk/ramblr/: SelfUpdateCheckWorker.kt  SelfUpdateChecker.kt  SelfUpdateInstallActionReceiver.kt  SelfUpdateInstallGate.kt  SelfUpdateInstallReceiver.kt  SelfUpdateInstallWorker.kt  SelfUpdateInstaller.kt  SelfUpdateNotifications.kt  SelfUpdatePrefs.kt  SelfUpdateResolver.kt  SelfUpdateSettingsActivity.kt  SelfUpdateStatusFormatter.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/llama_cleanup/: CMakeLists.txt  LLMInference.cpp  LLMInference.h  README.md  llama_cleanup_jni.cpp
app/src/main/cpp/sherpa_onnx/: CMakeLists.txt  README.md
app/src/main/kotlin/com/kafkasl/phonewhisper/: AdvancedActivity.kt  AnthropicCleanupProvider.kt  ApiKeyStore.kt  BaseSettingsActivity.kt  CleanupActivity.kt  CleanupBadgeVisibility.kt  CleanupCredentialStore.kt  CleanupPersona.kt  CleanupPreviewState.kt  CleanupStepStatusStore.kt  CleanupStyle.kt  CleanupWaterfall.kt  CleanupWaterfallEditing.kt  CleanupWaterfallExecutor.kt  CleanupWaterfallStore.kt  ClipboardUtil.kt  CloudFeatureToggle.kt  CloudProviderActivity.kt  CustomPersonaStore.kt  DebugVisibilityToggle.kt  DictationHistoryStore.kt  DictationModeToggle.kt  DownloadCompletionGate.kt  DownloadNotifications.kt  GeminiCleanupProvider.kt  GeminiTranscriberClient.kt  HexColorParser.kt  HideIconToggle.kt  HttpBodyReader.kt  IconHiddenState.kt  IconVisibilityNotifications.kt  InFlightCall.kt  InferenceBudget.kt  InjectionRecovery.kt  LivePreviewActivity.kt  LlamaCompletionAccumulator.kt  LlamaCppInference.kt  LocalCleanupConsent.kt  LocalCleanupModelHolder.kt  LocalCleanupProvider.kt  (+53 more)
app/src/main/kotlin/com/trevornk/ramblr/: AacEncoderSession.kt  AdvancedActivity.kt  AnthropicCleanupProvider.kt  ApiKeyStore.kt  AutoPeekDelay.kt  AutoPeekToggle.kt  BackupManager.kt  BaseSettingsActivity.kt  BehaviorActivity.kt  BenchmarkLogger.kt  CleanupActivity.kt  CleanupCredentialStore.kt  CleanupDestination.kt  CleanupPersona.kt  CleanupPreviewState.kt  CleanupStepStatusStore.kt  CleanupWaterfall.kt  CleanupWaterfallEditing.kt  CleanupWaterfallExecutor.kt  CleanupWaterfallStore.kt  ClipboardUtil.kt  CloudFeatureToggle.kt  CloudProviderActivity.kt  CompressedUploadToggle.kt  CustomPersonaStore.kt  DataLogsActivity.kt  DebugVisibilityToggle.kt  DictationHistoryStore.kt  DictationModeToggle.kt  DownloadCompletionGate.kt  DownloadNotifications.kt  GeminiCleanupProvider.kt  GeminiTranscriberClient.kt  HexColorParser.kt  HideIconToggle.kt  HttpBodyReader.kt  IconHiddenState.kt  IconVisibilityNotifications.kt  InFlightCall.kt  InferenceBudget.kt  (+72 more)
app/src/main/res/drawable/: ic_cleanup.xml  ic_launcher_foreground.xml  ic_launcher_foreground_inset.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  benchmark_log_file_paths.xml  data_extraction_rules.xml
app/src/test/kotlin/com/kafkasl/phonewhisper/: AnthropicCleanupProviderTest.kt  ApiKeyStoreTest.kt  BoundedBlockingCallTest.kt  CleanupBadgeVisibilityTest.kt  CleanupPersonaTest.kt  CleanupPreviewStateTest.kt  CleanupStepStatusStoreTest.kt  CleanupStyleTest.kt  CleanupWaterfallEditingTest.kt  CleanupWaterfallExecutorTest.kt  CleanupWaterfallStoreTest.kt  CleanupWaterfallTest.kt  ClipboardClearActionTest.kt  CustomPersonaStoreTest.kt  DebugVisibilityToggleTest.kt  DictationHistoryStoreTest.kt  DownloadCompletionGateTest.kt  DownloadNotificationsTest.kt  HexColorParserTest.kt  HideIconToggleTest.kt  HttpBodyReaderTest.kt  IconHiddenStateTest.kt  InFlightCallTest.kt  InferenceBudgetTest.kt  InjectionRecoveryTest.kt  LlamaCompletionAccumulatorTest.kt  LlamaCppInferenceDefaultsTest.kt  LocalCleanupConsentTest.kt  LocalCleanupModelSlotTest.kt  LocalCleanupProviderTest.kt  LocalTranscriberDetectModelConfigTest.kt  LocalTranscriberTest.kt  ModelCatalogJsonTest.kt  ModelCatalogResolverTest.kt  ModelDownloadWorkerTest.kt  ModelDownloaderTest.kt  NetworkClientsTest.kt  NetworkWarmupTest.kt  OmniRouteTest.kt  OnboardingWizardTest.kt  (+32 more)
app/src/test/kotlin/com/trevornk/ramblr/: AnthropicCleanupProviderTest.kt  ApiKeyStoreTest.kt  AutoPeekDelayTest.kt  AutoPeekToggleTest.kt  BackupManagerTest.kt  BenchmarkLoggerTest.kt  BoundedBlockingCallTest.kt  CleanupDestinationTest.kt  CleanupPersonaTest.kt  CleanupPreviewStateTest.kt  CleanupStepStatusStoreTest.kt  CleanupWaterfallEditingTest.kt  CleanupWaterfallExecutorTest.kt  InFlightCallTest.kt  (+71 more)
app/src/test/resources/eval_samples/: NOTES.md  edge_already_clean_01.txt  edge_very_short_01.txt  quick_note_01.txt  quick_note_02.txt  quick_note_03.txt  quick_note_04.txt  rambling_brainstorm_01.txt  rambling_brainstorm_02.txt  rambling_brainstorm_03.txt  rambling_brainstorm_04.txt  rambling_brainstorm_05.txt  self_correction_01.txt  self_correction_02.txt  self_correction_03.txt  self_correction_04.txt  spoken_list_01.txt  spoken_list_02.txt  spoken_list_03.txt  spoken_list_04.txt  technical_jargon_01.txt  technical_jargon_02.txt  technical_jargon_03.txt  technical_jargon_04.txt
docs/: index.html  main.js  privacy.html  style.css
docs/adr/: 0001-cleanup-waterfall.md
docs/plans/: 2026-07-02-fable-stt-dictation-plan.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  11.txt  12.txt  16.txt  6.txt  7.txt  8.txt  9.txt
fdroid-submission-notes/: NOTES.md  metadata-draft.yml
gradle/: verification-metadata.xml
tools/llama_cleanup_probe/: CMakeLists.txt  README.md  probe.cpp
tools/llama_cleanup_probe/fake_android/android/: log.h
(+7 files in other folders)
